--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -20,7 +20,9 @@
     </nav>
     <div class="container mt-5">
         <h1>Welcome to Our E-Commerce Platform</h1>
-        <p>Register or Login to continue.</p>
+        <p>Register or Login to continue.</p>   
+        <a href="/api/auth/google" class="btn btn-danger">Login with Google</a>
+
     </div>
 </body>
 </html>
