--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,28 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>E-Commerce</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">E-Commerce</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                </ul>
+export function Home() {
+    return (
+        <div>
+            <nav className="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div className="container">
+                    <a className="navbar-brand" href="#">E-Commerce</a>
+                    <div className="collapse navbar-collapse">
+                        <ul className="navbar-nav ms-auto">
+                            <li className="nav-item"><a className="nav-link" href="/register">Register</a></li>
+                            <li className="nav-item"><a className="nav-link" href="/login">Login</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <div className="container mt-5 text-center">
+                <h1>Welcome to Our E-Commerce Platform</h1>
+                <p>Register or Login to continue.</p>
+                <a href="http://localhost:5000/api/auth/google" className="btn btn-danger">Login with Google</a>
             </div>
         </div>
-    </nav>
-    <div class="container mt-5">
-        <h1>Welcome to Our E-Commerce Platform</h1>
-        <p>Register or Login to continue.</p>   
-        <a href="/api/auth/google" class="btn btn-danger">Login with Google</a>
-
-    </div>
-</body>
-</html>
+    );
+}
