--- a/src/frontend/register.html
+++ b/src/frontend/register.html
@@ -1,26 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Register</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container mt-5">
-        <h2>Register</h2>
-        <form id="registerForm">
-            <div class="mb-3">
-                <input type="text" id="name" class="form-control" placeholder="Full Name">
-            </div>
-            <div class="mb-3">
-                <input type="email" id="email" class="form-control" placeholder="Email">
-            </div>
-            <div class="mb-3">
-                <input type="password" id="password" class="form-control" placeholder="Password">
-            </div>
-            <button type="submit" class="btn btn-primary">Register</button>
-        </form>
-    </div>
-</body>
-</html>
+export function Register() {
+    return (
+        <div className="container mt-5 text-center">
+            <h2>Register</h2>
+            <form>
+                <div className="mb-3">
+                    <input type="text" className="form-control" placeholder="Full Name" required />
+                </div>
+                <div className="mb-3">
+                    <input type="email" className="form-control" placeholder="Email" required />
+                </div>
+                <div className="mb-3">
+                    <input type="password" className="form-control" placeholder="Password" required />
+                </div>
+                <button type="submit" className="btn btn-primary">Register</button>
+            </form>
+        </div>
+    );
+}
